--- a/src/Views/MicroApp1View/index.css
+++ b/src/Views/MicroApp1View/index.css
@@ -5,5 +5,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  background-color: #e2e9fb;
+}
+
+#micrp-app-1 .home {
+  width: 100%;
   margin-top: 22px;
+  height: auto;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
