--- a/src/Views/TestResultsView/index.css
+++ b/src/Views/TestResultsView/index.css
@@ -1,5 +1,109 @@
 #test-results {
   width: 48%;
   height: 240px;
-  background-color: #eee;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+#test-results .title-div {
+  width: 100%;
+  background-color: #f6f6f6;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+#test-results .tests-div {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#test-results .tests-div .min-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#test-results .tests-div .min-container p {
+  padding: 4px;
+}
+
+#test-results .tests-div .min-container .min-div-1 {
+  width: 90px;
+  height: 90px;
+  border: 0.5px solid #000;
+  border-radius: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#test-results .tests-div .min-container .min-div-1 .min-div {
+  width: 80px;
+  height: 80px;
+  border: 0.5px solid #000;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(13, 133, 216, 0.27);
+}
+
+#test-results .tests-div .latest-div-1 {
+  width: 100px;
+  width: 110px;
+  height: 110px;
+  border: 0.5px solid #000;
+  border-radius: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#test-results .tests-div .latest-div-1 .latest-div {
+  width: 100px;
+  height: 100px;
+  border: 0.5px solid #000;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(92, 103, 94, 0.27);
+}
+
+#test-results .tests-div .max-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#test-results .tests-div .max-container p {
+  padding: 4px;
+}
+
+#test-results .tests-div .max-container .max-div-1 {
+  width: 90px;
+  height: 90px;
+  border: 0.5px solid #000;
+  border-radius: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#test-results .tests-div .max-div-1 .max-div {
+  width: 80px;
+  height: 80px;
+  border: 0.5px solid #000;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(203, 38, 82, 0.27);
 }
