Logbook List completed

--- a/src/Views/LogbookView/index.css
+++ b/src/Views/LogbookView/index.css
@@ -1,5 +1,49 @@
 #logbook {
   width: 48%;
   height: 240px;
-  background-color: #eee;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+#logbook .title-div {
+  width: 100%;
+  background-color: #f6f6f6;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+#logbook .logbook-result {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+#logbook .logbook-result .entry {
+  width: 95%;
+  background-color: #f6f6f6;
+  border-radius: 10px;
+  margin: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logbook .logbook-result .entry .date {
+  padding: 0px 10px;
+}
+
+#logbook .logbook-result .entry .value {
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0.5px solid #000;
+  border-radius: 18px;
 }
