--- a/src/Views/NavigationTabsView/index.css
+++ b/src/Views/NavigationTabsView/index.css
@@ -29,7 +29,7 @@
 
 #topbar .tabs-container {
   width: 60%;
-  margin-top: 5.5%;
+  /* margin-top: 5.5%; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -51,6 +51,6 @@
 
 #topbar .tabs-container .tab p {
   color: #fff;
-  padding: 5px;
+  padding: 10px;
   font-size: 14px;
 }
