--- a/src/Views/TestResultsView/index.css
+++ b/src/Views/TestResultsView/index.css
@@ -66,15 +66,21 @@
   align-items: center;
   justify-content: center;
 }
+
 #test-results .tests-div .latest-div-1 .latest-div {
   width: 100px;
   height: 100px;
   border: 0.5px solid #000;
   border-radius: 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: rgba(92, 103, 94, 0.27);
+}
+
+#test-results .tests-div .latest-div-1 .latest-div .latest-desc {
+  font-size: 8px;
 }
 
 #test-results .tests-div .max-container {
