--- a/src/Views/AddDataView/index.css
+++ b/src/Views/AddDataView/index.css
@@ -2,4 +2,52 @@
   width: 48%;
   height: 240px;
   background-color: #eee;
+  border-radius: 10px;
+}
+
+#add-data .title-div {
+  width: 100%;
+  background-color: #f6f6f6;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+#add-data .body-div {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#add-data .body-div .input {
+  width: 45%;
+  height: 30px;
+  border-radius: 15px;
+  border: none;
+  padding: 0px 10px;
+  margin: 5px 0;
+}
+
+#add-data .body-div .input:focus {
+  outline: none;
+}
+
+#add-data .body-div .submit-btn {
+  width: 45%;
+  height: 30px;
+  border-radius: 15px;
+  border: none;
+  background-color: #90f99c;
+  padding: 0px 10px;
+  margin: 15px 0;
+  cursor: pointer;
+}
+
+#add-data .submit-btn:focus {
+  outline: none;
 }
